recursion.lessons.recursion.koch.SquareKoch.scala.error
SquareKoch:17: error: reassignment to val
	k=0
         ^SquareKoch:34: error: not found: value k
	motif(length,levels,k)
                            ^